browser/themes/shared/devtools/netmonitor.inc.css
/* ... */
/
*
Summary
tabpanel
*
/
.
tabpanel
-
summary
-
container
{
padding
:
1px
;
}
.
tabpanel
-
summary
-
label
{
-
moz
-
padding
-
start
:
4px
;
-
moz
-
padding
-
end
:
3px
;
font
-
weight
:
600
;
}
.
tabpanel
-
summary
-
value
{
color
:
inherit
;
-
moz
-
padding
-
start
:
3px
;
}
/
*
Headers
tabpanel
*
/
#
headers
-
summary
-
status
#
headers
-
summary
-
version
{
padding
-
bottom
:
2px
;
}
#
headers
-
summary
-
size
{
padding
-
top
:
2px
;
}
#
headers
-
summary
-
resend
{
margin
-
top
:
-
10px
;
-
moz
-
margin
-
end
:
6px
;
}
#
toggle
-
raw
-
headers
{
margin
-
top
:
-
10px
;
-
moz
-
margin
-
end
:
6px
;
}
.
raw
-
response
-
textarea
{
height
:
50vh
;
}
/
*
Response
tabpanel
*
/
#
response
-
content
-
info
-
header
{
margin
:
0
;
padding
:
3px
8px
;
background
-
color
:
var
(
-
-
theme
-
highlight
-
red
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
#
response
-
content
-
image
-
box
{
padding
-
top
:
10px
;
padding
-
bottom
:
10px
;
}
#
response
-
content
-
image
{
background
:
#
fff
;
border
:
1px
dashed
GrayText
;
margin
-
bottom
:
10px
;
}
/
*
Preview
tabpanel
*
/
#
preview
-
tabpanel
{
background
:
#
fff
;
}
#
response
-
preview
{
display
:
-
moz
-
box
;
-
moz
-
box
-
flex
:
1
;
}
/
*
Timings
tabpanel
*
/
#
timings
-
tabpanel
.
tabpanel
-
summary
-
label
{
width
:
10em
;
}
#
timings
-
tabpanel
.
requests
-
menu
-
timings
-
box
{
transition
:
transform
0
.
2s
ease
-
out
;
border
:
none
;
min
-
width
:
1px
;
}
#
timings
-
tabpanel
.
requests
-
menu
-
timings
-
total
{
transition
:
transform
0
.
2s
ease
-
out
;
}
/
*
Security
tabpanel
*
/
.
security
-
info
-
section
{
-
moz
-
padding
-
start
:
1em
;
}
#
security
-
tabpanel
{
overflow
:
auto
;
}
.
security
-
warning
-
icon
{
background
-
image
:
url
(
alerticon
-
warning
.
png
)
;
background
-
size
:
13px
12px
;
-
moz
-
margin
-
start
:
5px
;
vertical
-
align
:
top
;
width
:
13px
;
height
:
12px
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
security
-
warning
-
icon
{
background
-
image
:
url
(
alerticon
-
warning
2x
.
png
)
;
}
}
/
*
Custom
request
form
*
/
#
custom
-
pane
{
padding
:
0
.
6em
0
.
5em
;
}
.
custom
-
header
{
font
-
size
:
1
.
1em
;
}
.
custom
-
section
{
margin
-
top
:
0
.
5em
;
}
#
custom
-
method
-
value
{
width
:
4
.
5em
;
}
/
*
Footer
*
/
.
theme
-
dark
#
requests
-
menu
-
footer
{
border
-
top
:
1px
solid
table_itemDarkStartBorder
;
box
-
shadow
:
0
1px
0
table_itemDarkEndBorder
inset
;
background
-
color
:
var
(
-
-
theme
-
toolbar
-
background
)
;
}
.
theme
-
light
#
requests
-
menu
-
footer
{
border
-
top
:
1px
solid
table_itemLightStartBorder
;
box
-
shadow
:
0
1px
0
table_itemLightEndBorder
inset
;
background
-
color
:
var
(
-
-
theme
-
toolbar
-
background
)
;
}
.
requests
-
menu
-
footer
-
button
.
requests
-
menu
-
footer
-
label
{
min
-
width
:
1em
;
margin
:
0
;
border
:
none
;
padding
:
2px
1vw
;
}
.
theme
-
dark
.
requests
-
menu
-
footer
-
button
.
theme
-
dark
.
requests
-
menu
-
footer
-
label
{
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
theme
-
light
.
requests
-
menu
-
footer
-
button
.
theme
-
light
.
requests
-
menu
-
footer
-
label
{
color
:
var
(
-
-
theme
-
body
-
color
)
;
}
.
requests
-
menu
-
footer
-
spacer
{
min
-
width
:
2px
;
}
.
theme
-
dark
.
requests
-
menu
-
footer
-
spacer
:
not
(
:
first
-
child
)
.
theme
-
dark
.
requests
-
menu
-
footer
-
button
:
not
(
:
first
-
child
)
{
-
moz
-
border
-
start
:
1px
solid
table_itemDarkEndBorder
;
box
-
shadow
:
-
1px
0
0
table_itemDarkStartBorder
;
}
.
theme
-
light
.
requests
-
menu
-
footer
-
spacer
:
not
(
:
first
-
child
)
.
theme
-
light
.
requests
-
menu
-
footer
-
button
:
not
(
:
first
-
child
)
{
-
moz
-
border
-
start
:
1px
solid
table_itemLightEndBorder
;
box
-
shadow
:
-
1px
0
0
table_itemLightStartBorder
;
}
.
requests
-
menu
-
footer
-
button
{
-
moz
-
appearance
:
none
;
background
:
rgba
(
0
0
0
0
.
025
)
;
}
.
requests
-
menu
-
footer
-
button
:
hover
{
background
:
rgba
(
0
0
0
0
.
10
)
;
}
.
theme
-
dark
.
requests
-
menu
-
footer
-
button
:
hover
:
active
{
background
-
color
:
rgba
(
29
79
115
0
.
4
)
;
/
*
Select
Highlight
Blue
at
40
%
opacity
*
/
}
.
theme
-
light
.
requests
-
menu
-
footer
-
button
:
hover
:
active
{
background
-
color
:
rgba
(
76
158
217
0
.
4
)
;
/
*
Select
Highlight
Blue
at
40
%
opacity
*
/
}
.
theme
-
dark
.
requests
-
menu
-
footer
-
button
:
not
(
:
active
)
[
checked
]
{
background
-
color
:
rgba
(
29
79
115
1
)
;
/
*
Select
Highlight
Blue
*
/
color
:
rgba
(
245
247
250
1
)
;
/
*
Light
foreground
text
*
/
}
.
theme
-
light
.
requests
-
menu
-
footer
-
button
:
not
(
:
active
)
[
checked
]
{
background
-
color
:
rgba
(
76
158
217
1
)
;
/
*
Select
Highlight
Blue
*
/
color
:
rgba
(
245
247
250
1
)
;
/
*
Light
foreground
text
*
/
}
.
requests
-
menu
-
footer
-
label
{
padding
-
top
:
3px
;
font
-
weight
:
600
;
}
/
*
Performance
analysis
buttons
*
/
#
requests
-
menu
-
network
-
summary
-
button
{
background
:
none
;
box
-
shadow
:
none
;
border
-
color
:
transparent
;
list
-
style
-
image
:
url
(
profiler
-
stopwatch
.
svg
)
;
-
moz
-
padding
-
end
:
0
;
cursor
:
pointer
;
}
#
requests
-
menu
-
network
-
summary
-
label
{
-
moz
-
padding
-
start
:
0
;
cursor
:
pointer
;
}
#
requests
-
menu
-
network
-
summary
-
label
:
hover
{
text
-
decoration
:
underline
;
}
/
*
Performance
analysis
view
*
/
#
network
-
statistics
-
toolbar
{
border
:
none
;
margin
:
0
;
padding
:
0
;
}
#
network
-
statistics
-
back
-
button
{
min
-
width
:
4em
;
min
-
height
:
100vh
;
margin
:
0
;
padding
:
0
;
border
-
radius
:
0
;
border
-
top
:
none
;
border
-
bottom
:
none
;
-
moz
-
border
-
start
:
none
;
}
#
network
-
statistics
-
view
-
splitter
{
border
-
color
:
rgba
(
0
0
0
0
.
2
)
;
cursor
:
default
;
pointer
-
events
:
none
;
}
#
network
-
statistics
-
charts
{
min
-
height
:
1px
;
}
#
network
-
statistics
-
charts
{
background
-
color
:
var
(
-
-
theme
-
toolbar
-
background
)
;
}
#
network
-
statistics
-
charts
.
pie
-
chart
-
container
{
-
moz
-
margin
-
start
:
3vw
;
-
moz
-
margin
-
end
:
1vw
;
}
/* ... */

